--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
   <audio id="audio-window" src="window.mp3"></audio>
 
 <script>
+  window.onload = () => {
+  place('window', 0, 0);
+  place('tv', 831, 70);
+  place('fire', 773, 480);
+  place('music', 607, 568);
+};
+  
   function place(id, cx, cy) {
     const el = document.getElementById(id);
     const w = el.naturalWidth;
