--- a/index.html
+++ b/index.html
@@ -15,18 +15,6 @@
     overflow:hidden;
   }
 
-    #stage {
-    position: relative;
-    width: var(--W)px;
-    height: var(--H)px;
-    transform-origin: top left;
-  }
-    #bg {
-      width: 100%;
-      height: 100%;
-      display: block;
-    }
-
   .obj {
     position:absolute; cursor:pointer;
     transition: transform .15s ease;
@@ -66,6 +54,7 @@
   <audio id="audio-window" src="window.mp3"></audio>
 
 <script>
+  
   function place(id, cx, cy) {
     const el = document.getElementById(id);
     const w = el.naturalWidth;
@@ -73,13 +62,14 @@
     el.style.left = (cx - w/2) + 'px';
     el.style.top  = (cy - h/2) + 'px';
   }
-
   
-  place('window', 0, 0);
-  place('tv', 831, 70);
-  place('fire', 773, 480);
-  place('music', 607, 568);
-
+  window.onload = () => {
+  place('window', 150, 336);
+  place('tv', 1100, 260);
+  place('fire', 1100, 745);
+  place('music', 702, 633);
+};
+  
   function togglePlay(id){
     const a = document.getElementById(id);
     if (a.paused) a.play(); else { a.pause(); a.currentTime = 0; }
@@ -144,7 +134,6 @@
     if (audio.paused) {
       audio.play();
 
-      // 일정 간격으로 음표 생성
       noteInterval = setInterval(() => {
         createNote(el);
       }, 500);
@@ -186,4 +175,4 @@
 
 </script>
 </body>
-</html>
+</html> 
