--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8" />
-<title>Living Room Sound Mixer</title>
+<title>home sweet home</title>
 <style>
   :root { --W: 1536; --H: 1024; }
 
